<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GeopaparazziLibrary</string>
    <string name="cancel">cancel</string>
    <string name="ok">ok</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="up">up</string>
    <string name="cantcreate_sdcard">Wasn\'t able to create folder on sdcard ({0}). Exiting...</string>
    <string name="sdcard_notexist">Sdcard folder doesn\'t exist or is not writable (is it possible it is mounted on a pc?). Exiting...</string>
    <string name="error_disk_full">The disk to which to log to seems to be full. Free some memory and start again.</string>
    <string name="cantwrite_gpslog">ERROR: couldn\'t write gps log!</string>
    <string name="gpsloggingoff">Stopped gps logging.</string>
    <string name="gpsloggingon">Started gps logging...</string>
    <string name="gpsloggingalarm">Avoid/stop alarm... </string>
    <string name="prompt_gpsenable">Your gps is disabled! Would you like to enable it?</string>
    <string name="last_position">Last position</string>
    <string name="last_position_unknown">Sorry, could not identify the location properly.</string>
    <string name="cantcreate_img_folder">Can\'t create the folder into which to save the image.</string>
    <string name="gpx_import_title">Line or Point?</string>
    <string name="gpx_import_message">Choose whether the file is to be imported as points or lines.</string>
    <string name="gpx_import_checkbox_message">Force import as line?</string>
    <string name="gpx_import_processing">Importing gpx...</string>
    <string name="insert_note">insert your note here</string>
    <string name="notesaved">Note successfully saved!</string>
    <string name="notenonsaved">An error occurred while saving the Note!</string>
    <string name="notecancel">Note not saved as requested by user.</string>
    <string name="longitude">longitude</string>
    <string name="latitude">latitude</string>
    <string name="askcoord">Please insert the coordinates to go to</string>
    <string name="wrongLongitude">Longitude has to be a number between -180 and 180.</string>
    <string name="wrongLatitude">Latitude has to be a number between -90 and 90.</string>
    <string name="okcoord">use coord</string>
    <string name="message_sent">Message sent</string>
    <string name="check_valid_field">Please check that the field \"{0}\" is valid.</string>
    <string name="select_dotdot">Select...</string>
    <string name="type_to_filter">type to filter</string>
    <string name="webprojects_list_title">Remote Projects List</string>

    <!-- bluetooth stuff -->
    <string name="pref_start_gps_title">Start/Stop device</string>
    <string name="pref_start_gps_summary_off">Bluetooth device is off</string>
    <string name="pref_start_gps_summary_on">Bluetooth device is on</string>
    <string name="pref_start_gps_params_title">GPS Options (SiRF)</string>
    <string name="pref_gps_location_provider_title">Location provider options</string>
    <string name="pref_gps_location_provider_summary">Bluetooth GPS will replace internal GPS</string>
    <string name="pref_replace_std_gps_title">Replace internal GPS</string>
    <string name="pref_replace_std_gps_summary_on">Bluetooth GPS will replace internal GPS</string>
    <string name="pref_replace_std_gps_summary_off">Bluetooth GPS will use a new location provider</string>
    <string name="pref_force_enable_provider_title">Auto-enable location provider</string>
    <string name="pref_force_enable_provider_summary_on">Auto-enable the location provider, even if it has been disabled</string>
    <string name="pref_force_enable_provider_summary_off">Auto-enable the location provider only if it doesn\'t exist yet</string>
    <string name="pref_mock_gps_name_title">Mock location provider name</string>
    <string name="pref_mock_gps_name_summary">Bluetooth GPS name: %s</string>
    <string name="pref_connection_retries_title">Connection retry number</string>
    <string name="pref_connection_retries_summary">Number of attempts before exiting: %s</string>
    <string name="pref_recording_title">Enable/Disable NMEA log</string>
    <string name="pref_recording_summary_off">Track recording is off</string>
    <string name="pref_recording_summary_on">Track recording is on</string>
    <string name="pref_recording_params_title">Recording parameters</string>
    <string name="pref_trackfile_prefix_title">Trackfiles prefix</string>
    <string name="pref_trackfile_prefix_summary">Select the prefix for the track files</string>
    <string name="pref_trackfile_directory_title">Trackfiles directory</string>
    <string name="pref_trackfile_directory_summary">Select the directory for the track files</string>
    <string name="pref_bluetooth_device_title">Choose Bluetooth Device</string>
    <string name="pref_bluetooth_device_summary">"Current device: %s"</string>
    <string name="pref_about_title">About</string>
    <string name="pref_about_summary"></string>
    <string name="pref_sirf_gps_title">SiRF GPS</string>
    <string name="pref_sirf_gps_summary_off">"Use SiRF Options"</string>
    <string name="pref_sirf_gps_summary_on">"Don't SiRF Options"</string>
    <string name="pref_sirf_nmea_category_title">Choice of NMEA sentences</string>
    <string name="pref_sirf_gps_category_title">GPS operation</string>
    <string name="pref_enable_gga_title">Enable NMEA GGA</string>
    <string name="pref_enable_gga_summary_off">NMEA GGA sentences are off</string>
    <string name="pref_enable_gga_summary_on">NMEA GGA sentences are on</string>
    <string name="pref_enable_rmc_title">Enable NMEA RMC</string>
    <string name="pref_enable_rmc_summary_off">NMEA RMC sentences are off</string>
    <string name="pref_enable_rmc_summary_on">NMEA RMC sentences are on</string>
    <string name="pref_enable_gll_title">Enable NMEA GLL</string>
    <string name="pref_enable_gll_summary_off">NMEA GLL sentences are off</string>
    <string name="pref_enable_gll_summary_on">NMEA GLL sentences are on</string>
    <string name="pref_enable_vtg_title">Enable NMEA VTG</string>
    <string name="pref_enable_vtg_summary_off">NMEA VTG sentences are off</string>
    <string name="pref_enable_vtg_summary_on">NMEA VTG sentences are on</string>
    <string name="pref_enable_gsa_title">Enable NMEA GSA</string>
    <string name="pref_enable_gsa_summary_off">NMEA GSA sentences are off</string>
    <string name="pref_enable_gsa_summary_on">NMEA GSA sentences are on</string>
    <string name="pref_enable_gsv_title">Enable NMEA GSV</string>
    <string name="pref_enable_gsv_summary_off">NMEA GSV sentences are off</string>
    <string name="pref_enable_gsv_summary_on">NMEA GSV sentences are on</string>
    <string name="pref_enable_zda_title">Enable NMEA ZDA</string>
    <string name="pref_enable_zda_summary_off">NMEA ZDA sentences are off</string>
    <string name="pref_enable_zda_summary_on">NMEA ZDA sentences are on</string>
    <string name="pref_enable_sbas_title">SBAS (WAAS/EGNOS)</string>
    <string name="pref_enable_sbas_summary_off">SBAS is off</string>
    <string name="pref_enable_sbas_summary_on">SBAS is on</string>
    <string name="pref_enable_nmea_title">NMEA/Binary mode</string>
    <string name="pref_enable_nmea_summary_off">Binary mode is on</string>
    <string name="pref_enable_nmea_summary_on">NMEA mode is on</string>
    <string name="pref_enable_static_navigation_title">Static Navigation</string>
    <string name="pref_enable_static_navigation_summary_off">Static Navigation disabled</string>
    <string name="pref_enable_static_navigation_summary_on">Static Navigation enabled</string>
    <string name="msg_gps_provider_started">Bluetooth GPS... started</string>
    <string name="msg_gps_provider_stopped">Bluetooth GPS... stopped</string>
    <string name="msg_gps_provider_already_started">Bluetooth GPS... is already on</string>
    <string name="msg_gps_provider_stopped_by_problem">"Cannot start: %s"</string>
    <string name="msg_two_many_connection_problems">Too many connection problems</string>
    <string name="msg_gps_provider_disabled">GPS is disabled</string>
    <string name="msg_bluetooth_unsupported">Bluetooth is not supported</string>
    <string name="msg_bluetooth_disabled">Bluetooth is disabled</string>
    <string name="msg_mock_location_disabled">Mock locations disabled</string>
    <string name="msg_bluetooth_gps_unavaible">Cannot connect to bluetooth GPS</string>
    <string name="msg_nmea_recording_started">GPS NMEA recording... started</string>
    <string name="msg_nmea_recording_stopped">GPS NMEA recording... stopped</string>
    <string name="msg_nmea_recording_already_started">GPS track recording... is already on</string>
    <string name="foreground_service_started_notification_title">BlueGps</string>
    <string name="foreground_gps_provider_started_notification">BlueGps service started</string>
    <string name="foreground_nmea_recording_started_notification">BlueGps NMEA recording service started</string>
    <string name="connection_problem_notification_title">BlueGps: connection problem</string>

    <plurals name="connection_problem_notification">
        <item quantity="one">Will retry one more time before closing</item>
        <item quantity="other">Will retry %d more times before closing</item>
    </plurals>

    <string name="service_closed_because_connection_problem_notification_title">BlueGps stopped</string>
    <string name="service_closed_because_connection_problem_notification">"Reason: %s"</string>
    <string name="downloading">Downloading...</string>
    <string name="downloading_projects_list_from_server">Downloading projects list from server.</string>
    <string name="error_projects_list">An error occurred while retrieving the projects list.</string>
    <string name="downloading_project">Downloading project...</string>
    <string name="downloading_project_to_the_device">Downloading selected project to the device.</string>
    <string name="project_successfully_downloaded">The project has been successfully downloaded.</string>
    <string name="proximity_alert">Proximity Alert!</string>
    <string name="approaching_poi">Approaching a point of interest.</string>

</resources>