<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical" android:padding="10px"
	android.setVerticalScrollBarEnabled="true" android:background="#FFFFFF">
	<EditText android:id="@+id/noteentry" android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:layout_weight="6"
		android:hint="@string/insert_note" android:gravity="top"
		android:lines="15" />

	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="horizontal"
		android:layout_weight="1" android:background="#FFFFFF"
		android:padding="10px">
		<Button android:id="@+id/ok" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:layout_weight="1"
			android:text="@string/ok" />
		<Button android:id="@+id/cancel" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:layout_weight="1"
			android:text="@string/cancel" />
	</LinearLayout>
</LinearLayout>
